# zap

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md  cliff.toml  i18n.toml  issue_157_duplicate_check.md  issue_157_labels.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_ssh_tmux.yml  04_ssh_legacy.yml  config.yml
.github/workflows/: claude.yml  issue-triage.yml  openwarp_homebrew_validate.yml  openwarp_macos_release.yml  openwarp_release.yml  release_configurations.json  stale.yml  zap_release.yml
app/: Cargo.toml  build.rs  i18n.toml
app/channels/oss/: dev.warp.OpenWarp.desktop
app/i18n/: PROGRESS.md
app/i18n/en/: warp.ftl
app/i18n/ja/: warp.ftl
app/i18n/zh-CN/: warp.ftl
app/src/: app_menus.rs  app_state.rs  appearance.rs  font_fallback.rs  global_resource_handles.rs  i18n.rs  lib.rs  menu.rs  menu_test.rs  profiling.rs  referral_theme_status.rs  reward_view.rs  root_view.rs  tab.rs  wasm_nux_dialog.rs
app/src/ai/: agent_conversations_model.rs  ai_document_view.rs  conversation_details_panel.rs  conversation_utils.rs  harness_display.rs  llms.rs  (+5 more)
crates/remote_server/: Cargo.toml
crates/warp_ai_cli/: Cargo.toml
crates/warp_ai_cli/src/: client.rs  config.rs  main.rs  tools.rs
crates/warp_ssh_manager/: Cargo.toml
crates/warp_ssh_manager/src/: lib.rs  repository.rs  secrets.rs  ssh_command.rs  ssh_config_parser.rs  sync_provider.rs  types.rs
crates/warpui_core/: Cargo.toml
crates/zap_sync/: Cargo.toml
crates/zap_sync/src/: crypto.rs  gist_client.rs  lib.rs  sync_engine.rs  types.rs
docs/: migrate-from-warp.ja.md  migrate-from-warp.md  migrate-from-warp.zh-CN.md  openwarp-upstream-sync.md
lib/rust-genai/: Cargo.toml
script/: generate_changelog  openwarp_upstream_sync  prepare_bundled_resources  setup-merge-drivers.sh  update_plist
script/linux/: bundle  bundle_arch  bundle_install  install_build_deps  linuxdeploy-plugin-warp
script/macos/: bundle  run
script/windows/: README.md  bundle.ps1  prepare_bundled_resources.ps1  rebuild_icon.ps1  windows-installer.iss
scripts/: generate-logos.ts  package.json  preview-logo-mono.ts
specs/gh-110-ssh-config-import/: PRODUCT.md  TECH.md
specs/openwarp-auto-brew-release/: TECH.md
themes/: one_dark.yaml  tokyo_night.yaml  vscode_2026_dark.yaml  vscode_2026_dark_ui.yaml
website/: .gitignore  README.md  astro.config.mjs  nixpacks.toml  package-lock.json  package.json  tailwind.config.mjs
website/design/: OpenWarp Docs.html  OpenWarp.html
website/src/: content.config.ts
(+727 files in other folders)
